# Cpp-Cmake-Base-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  deps.txt  full_rebuild.sh  run.sh
.cache/clangd/index/: main.cpp.FDFDFE9F63D8402F.idx
src/: main.cpp
